# trianglify-rs

./: Cargo.toml  README.md
resources/: colors.json
src/: main.rs
