[package]
name = "trianglify-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
delaunator = "1.0.2"
rand = "0.8.5"
svg = "0.13.1"

[[bin]]
name = "trianglify" 
path = "src/main.rs"
